# Aerys-V2

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
db/migrations/: 001_turns_and_outbox.sql  002_extraction_shadow.sql  003_model_usage.sql  004_capability_requests.sql  005_channel_room_context.sql  006_email_watch.sql  007_self_reported_gaps.sql
deploy/: phoenix.md
docs/: capability-request-loop-design.md  satellite-routing-design.md
docs/design/: 2026-07-02-hands-contract.md  2026-07-02-turns-outbox-spine.md
docs/learning/: 01-factory-service-ask.md  02-turns-outbox-spine.md  04-channel-pure-functions.md  05-read-services.md  06-discord-gateway.md  07-http-door-and-jetson-deploy.md  08-oauth-backend.md  09-replay-harness.md  10-memory-context.md  11-phoenix-tracing.md  12-tools-block.md  13-extraction-shadow.md  14-media-tools.md  15-tier-routing.md  16-turns-writer.md  17-self-iteration-loop.md  (+3 more)
scripts/: gaps_digest.py  parity_check.py
tests/: test_action_orchestration.py  test_alerts.py  test_capability_requests.py  test_cli_discord_runner.py  test_cli_telegram_runner.py  test_config.py  test_content_privacy.py  test_context.py  test_discord_commands.py  test_discord_interactions.py  test_discord_link.py  test_discord_transport.py  test_email_tool.py  test_email_watch.py  test_evals.py  test_extraction.py  test_handoff_loop.py  test_home_control.py  test_honesty_fixes.py  test_http_api.py  test_identity_resolver.py  test_log_gap.py  test_media_detect.py  test_media_tools.py  test_music_tool.py  test_oauth_model.py  test_openai_compat.py  test_panel_presence.py  test_panel_pusher.py  test_replay.py  test_room_context.py  test_router.py  test_service.py  test_services.py  test_splitter.py  test_state.py  test_telegram_transport.py  test_tiering.py  test_timer.py  test_tracing.py  (+5 more)
(+56 files in other folders)
