[project]
name = "aerys-v2"
version = "0.1.0"
description = "A personal AI companion and assistant, built on LangGraph."
readme = "README.md"
authors = [
    { name = "sira-fiinikkusu", email = "181170082+sira-fiinikkusu@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.4",
    "fastapi>=0.115",
    "langchain-anthropic>=1.4.6",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=2.0",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.32",
]

[project.scripts]
aerys-v2 = "aerys_v2.cli:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
